  34. Races now support natural immunities (mostly for disease).  MG and CL editor support added.
  35. Added the rest of the Tech resource types .. mind your items with custom resource defs!
  36. Some new tech power generator types created, as well as a new fuelless engine type and options.
  37. New tech component: Light Switch 
# Build 5.9.1 Released 01/04/2016
   1. "Who accounts", used by an archon, can quickly list the account name of each player online.
   2. New Achievement event "GOTITEM", and new rewards (see new stats below and achievements.ini)
   3. New Player stats for Bonus char creation points, common skill limits
   4. New Account stats for Bonus char per account, chars online, char creation points, common skill limits
   5. New Property: Prop_ItemBinder, for binding items to char, acct, clan. How did that get missed all these years?
   6. New version of Siplet (the web client).  Now uses WebSockets for streaming joy.
   7. New disease: Sleepwalking.  Very rare, but can be caught through extreme fatigue.
   8. New Beastmaster / Ranger skill: Animal Bonding.
   9. Masonry/Construction now have their own recipe files.  Not much you can do with them, but still better than code.
  10. Artisans now get bonus xp for crafting items, with some minor anti-botting measures in.
  11. Due to a strange accident, lots of Wizard-class bugs fixed.  It's still an unavailable class.
  12. New Property: Prop_LotForSale, like Prop_LotsForSale, but you only have to buy the property once.
  13. New Property: Prop_RoomPlusForSale, like Prop_RoomForSale, but you are allowed to expand it for free.
  14. Prop_ReqCapacity now has a new argument to interact with Prop_LotForSale, and special circumstances for it.
  15. New property building skills: Landscaping, Excavation, and Unknown/Unfinished skills: Welding, Irrigation
  16. Lots of bugs fixed.
  17. MOTD command can now be used to review previous/old news
# Build 5.9.0 Released 12/20/2015
   1. Web Server upgraded to 2.3