@@ -947,9 +947,10 @@ They usually enhance existing skills, spells, songs, prayers, or chants.
 	
 EMAIL=\
 Command : EMAIL\n\r\
-Usage   : EMAIL (BOX)/([PLAYER NAME])\n\r\
+Usage   : EMAIL (BOX ([NUM]))/([PLAYER NAME])\n\r\
 Example : email\n\r\
 Example : email box\n\r\
+Example : email box 10\n\r\
 Example : email Joe\n\r\
 Short(s): \n\r\
 Entering this command without any parameters will guide the player \
@@ -959,7 +960,8 @@ the player address will be forwarded to this email address.\n\r\
 \n\r\
 Entering this command with the parameter of BOX will allow the \
 player to read any email on file, for cases when the player has \
-their AUTOFORWARD config flag off.\n\r\
+their AUTOFORWARD config flag off. A number may be appended to \
+limit the number of newer messages shown.\n\r\
 \n\r\
 Entering this command with the name of a player will allow an email \
 to be sent which, depending upon that players settings, will either \
